k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab
  labels:
    name: homelab
    purpose: mlops-practice
